...
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/settingsSaveButton"
        android:layout_width="303dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="532dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
...
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/colour_switch"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="25dp"
        android:text="@string/off_on"
...
