<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/account"
        android:id="@+id/ab_account"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_account"/>

    <item android:title="@string/refresh"
        android:id="@+id/ab_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_refresh_white"/>

    <item android:title="@string/settings"
        android:id="@+id/ab_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"/>

    <item android:title="@string/feedback"
        android:id="@+id/ab_feedback"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>