...
    <string name="leavingTitle">Leaving?</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="settings">Settings</string>
    <string name="door">Door</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_we_will_add_temperature_method">Here we will add Temperature method</string>
    <string name="here_we_will_implement_lights_method">Here we will implement lights method</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
...
    <string name="light_configuration">Light</string>
    <string name="temp_configuration">Temp</string>
    <string name="window_configuration">Window</string>
    <string name="currenttemp">Current Temperature:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="unlock">Unlocked</string>
    <string name="lock">Locked</string>
    <string name="check_status">Check Status</string>
    <string name="space" translatable="false"> </string>
    <string name="google_signin_error">Something went wrong!</string>
    <string name="work_under_construction">Work under construction</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
...
