...
        android:src="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/statusofDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="168dp"
        android:text="@string/lock_unlock_door"
        android:textColor="#000000"
...
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/doorLockBtn"
        android:layout_width="290dp"
        android:layout_height="264dp"
        android:layout_marginStart="56.5dp"
        android:layout_marginTop="208dp"
        android:textOff="@string/check_status"
        app:layout_constraintStart_toStartOf="parent"
...
