...
            android:layout_marginTop="118dp"
            android:src="@drawable/ic_light_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/onLights"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="108dp"
            android:background="@null"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/statusOfLight"
        android:layout_width="136dp"
        android:layout_height="81dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="255dp"
        android:text="@string/lightStatusMSG"
        android:textAlignment="center"
...
